--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,7 +73,7 @@ mybatis:
     typeAliasesPackage: com.express.project
     # 配置mapper的扫描，找到所有的mapper.xml映射文件
     mapperLocations: classpath:mybatis/**/*Mapper.xml
-    # 加载全局的配置文件
+  # 加载全局的配置文件
     configLocation: classpath:mybatis/mybatis-config.xml
 
 # PageHelper分页插件
@@ -125,9 +125,9 @@ xss:
 # 代码生成
 gen: 
   # 作者
-  author: express
+  author: Chenyb
   # 默认生成包路径 system 需改成自己的模块名称 如 system monitor tool
-  packageName: com.express.project.system
+  packageName: com.express.project.system.area
   # 自动去除表前缀，默认是true
   autoRemovePre: true
   # 表前缀(类名不会包含表前缀)
