--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -127,8 +127,8 @@ gen:
   # 作者
   author: Chenyb
   # 默认生成包路径 system 需改成自己的模块名称 如 system monitor tool
-  packageName: com.express.project.system.area
+  packageName: com.express.project.cargo
   # 自动去除表前缀，默认是true
   autoRemovePre: true
   # 表前缀(类名不会包含表前缀)
-  tablePrefix: sys_
+  tablePrefix: ex_
