--- a/src/main/resources/application-druid.yml
+++ b/src/main/resources/application-druid.yml
@@ -6,8 +6,9 @@ spring:
         druid:
             # 主库数据源
             master:
+                #2r4c301636.zicp.vip:35366
 #                url: jdbc:mysql://localhost:3306/ex?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-                url: jdbc:mysql://24w25i9510.qicp.vip:37696/ex?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                url: jdbc:mysql://2r4c301636.zicp.vip:35366/ex?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
                 username: root
                 password: mxl131619
             # 从库数据源
